# flexible_dict

./: .gitattributes  .gitignore  MANIFEST.in  README.md  build.sh  packaging.sh  pyproject.toml  requirements.txt  run_test.sh  setup.py  tox.ini
.github/scripts/: release.py
.github/workflows/: publish.yml  release.yml
flexible_dict/: __init__.py  __main__.py  about.py  adapter.py  json_object.py  utils.py  version.py
flexible_dict/script/: class_builder.py
tests/: test_build_class.py  test_json_object.py
tests/data/: a.json  a.py
